Changes for 1.8.4rc1

 - [ZBX-2923] fixed triggers that depends on problem trigger are shown as problem on map (Vedmak)
 - [ZBX-2683] minor updates for the Latvian translation (Richlv)
 - [ZBX-2916] fixed duplicate map parent links in monitoring maps (Vedmak) 
 - [ZBX-2905] fixed single trigger name expand on maps, unknown problem count, duplicate elements count (Vedmak)
 - [ZBX-2914] unified pidfile path in example Debian initscripts with example config files (Richlv)
 - [ZBX-886] removed duplicate locale string S_ACTIONS_BIG (Richlv)
 - [ZBX-633] fixed server crash on disconnected IPMI devices (asaveljevs)
 - [ZBX-2904] fixed some unknown triggers not shown in status of triggers screen (Vedmak)
 - [ZBX-2900] added spaces to "From:" and "To:" email headers (asaveljevs)
 - [ZBX-2894] fixed multiple references on same line in map labels (Vedmak)
 - [ZBX-2888] fixed host profiles export (Vedmak)
 - [ZBX-2890] fixed parsing of negative values in trigger expressions (Vedmak)
 - [ZBX-2798] added more checks for unknown nodes to communication between nodes (asaveljevs)
 - [ZBX-2716] make all example initscripts point to sbin for daemon path (Richlv)

Changes for 1.8.3

 - [ZBX-2875] updated Japanese translation; thanks to Kodai Terashima (Richlv)
 - [ZBX-2856] removed debug info (Aly)
 - [ZBX-2855] fixed new line symbol for latest opera browser (Aly)
 
Changes for 1.8.3rc4

 - [ZBX-2226] fixed template item update, when linked to host with existing item with same key (Aly)
 - [ZBX-2853] updated Ukrainian translation; thanks to zalex_ua (Richlv)
 - [ZBX-1324] replaced more user visible strings ZABBIX with Zabbix (Richlv)
 - [ZBX-2836] fixed text items history not displaying all spaces in text (Vedmak)
 - [ZBX-2835] improved screen permission checks in frontend (Vedmak)
 - [ZBX-2829] fixed web item graphs favourites (Vedmak)
 - [ZBX-2812] updated French translation; thanks to Alixen (Vedmak)
 - [ZBX-2823] updated Russian translation; thanks to Pustovalov Alexey (Vedmak)