@@ -1,5 +1,6 @@
 Changes for 1.8.4rc1
 
+ - [ZBX-1908] fixed file and socket descriptors leaking to child processes. Thanks to Dan Horak. (asaveljevs)
  - [ZBX-2923] fixed triggers that depends on problem trigger are shown as problem on map (Vedmak)
  - [ZBX-2683] minor updates for the Latvian translation (Richlv)
  - [ZBX-2916] fixed duplicate map parent links in monitoring maps (Vedmak) 
